# CppExampleForMe

./: README.md
neural_net_implementation/: CMakeLists.txt  main.cpp
torch_example/: CMakeLists.txt
torch_example/include/: network.h
